half complete on ln00.tex

--- a/subnotes/acknowledgements.tex
+++ b/subnotes/acknowledgements.tex
@@ -1,2 +1,9 @@
 \section{Preface}
-Preface will be written later.
+These pieces of notes, to be updated irregularly, are meant to support upcoming syllabus changes in coming semesters of EECS 16A towards Signal Processing.
+The contents of these notes will very likely be a superset of any coming semester`s syllabus that involves signal processing, and will therefore have extraneous parts out of some semesters` scopes.
+Specifically, these notes will be dedicated to the union of EECS 16A`s past linear algebra content and EECS 20N`s 2011 rendition`s syllabus.
+
+As the volume of this note will naturally exceed a 4-unit course worth of content, it will take a lot of time and effort to complete these notes. Therefore, the project is made open-source for interested parties to help maintaining with.
+It will be the primary author's first time reading some of the involved contents in this note, so there may be a lack of upper-division-level insight in signal processing from this note.
+
+The rest of preface will be written when it is finally not Christmas.
